# model-asr-quran

./: .dockerignore  .env.example  .gitignore  00_local_test.ipynb  01_setup_deps_dataset.ipynb  02_prepare_train_loop.ipynb  99_colab_train.ipynb  Makefile  README.id.md  README.md  ROADMAP.md  main.py  pyproject.toml  render.yaml  requirements-colab.txt  requirements.txt
api/: __init__.py  app.py  docs.py  main.py  settings.py
api/core/: __init__.py  context.py  errors.py  ids.py  logging.py  middleware.py  pagination.py  rate_limit.py
api/db/: __init__.py  models.py  seed.py
api/routers/: __init__.py  audio.py  auth.py  evaluate.py  home.py  insights.py  practice_items.py  practice_sessions.py  profile.py
api/schemas/: __init__.py  audio.py  auth.py  common.py  evaluate.py  home.py  insights.py  practice_items.py  practice_sessions.py  profile.py  realtime.py
api/security/: __init__.py  deps.py  tokens.py
api/services/: asr_provider.py  audio_codec.py  evaluation_pipeline.py  insights_builder.py  letter_mastery.py  quran_provider.py  readiness.py  result_mapper.py  runtime_cleanup.py  seed_data.py  supabase_auth.py  upload_store.py
api/static_data/: __init__.py
api/tests/: conftest.py  test_api_smoke.py  test_asr_provider.py  test_audio_cleanup.py  test_chunk_upload.py  test_database_models.py  test_database_schema.py  test_database_seed.py  test_evaluation_schema.py  test_insights_builder.py  test_ownership.py  test_rate_limit.py  test_result_mapper.py  test_runtime_cleanup.py  test_setup_database.py  (+2 more)
configs/: base.yaml  cloud.yaml  cloud_local.yaml  cloud_warmstart.yaml  local_3050.yaml  local_warmstart.yaml  tiny.yaml  tiny_warmstart.yaml  vocab.yaml
docs/: API_E2E_EVIDENCE.md  COLAB_GPU.md  LIVE_INFERENCE.md  MAIN_LAUNCHER.md  MANUAL_TRAIN_NOTEBOOK_PATCH.md  MODEL_EVALUATION_EVIDENCE.md  P1_READINESS_CHECKLIST.md  P1_SECURITY_AUDIT.md  SUPABASE_DATABASE_EVIDENCE.md  TRAINING_NOTES_LOCAL_3050.md  VIDEO_DEMO_RUNBOOK.md  database_schema.sql
notebooks/: 01_colab_train.ipynb  02_inference_demo.ipynb  03_warmstart_train.ipynb  04_local_train.ipynb
quran_asr/: __init__.py  audio_io.py  config.py  inference_live.py  launcher.py  reference.py
scripts/: build.py  build_vocab.py  cloud_preflight.py  correct.py  download.py  evaluate.py  install_colab_deps.sh  live_infer_asr.py  setup_database.py  train.py  train_manual.py
tests/: conftest.py  test_corrector.py  test_download_audio.py  test_inference_live.py  test_launcher.py  test_normalize.py  test_reference.py  test_repeat_aware_retry.py  test_smoke.py  test_splits.py  test_vocab.py
web/: app.py  config.py  inference.py
(+41 files in other folders)
