[project]
name = "quran-asr"
version = "0.1.0"
description = "wav2vec2 Quran recitation ASR + word/diacritics-level correction model"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.3",
    "torchaudio>=2.3",
    "transformers>=4.41",
    "datasets>=2.19",
    "accelerate>=0.30",
    "evaluate>=0.4",
    "jiwer>=3.0",
    "huggingface_hub>=0.23",
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quran_asr"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
